test: 테스트 코드 수정
- 가독성을 지키도록 수정한다.